Development
	Updated Czech translation
	Don't hide controls and mouse in fullscreen mode when mouse is over controls
1.0.0
	Updated es and pt_BR translations from Launchpad
	Fix bug #444 - embedded fonts not being used in mkv files
	Fix case of cache fill display not being reset with remote files
	Set cache fill graphical display to 0 once streaming media is started
	Enable screensaver at quit
	Add cache percentage graphical display to the tracker
0.9.99.rc3
	Updated Finnish translation
	Version bump to 0.9.99rc2
	Fixed problem with --fullscreen flag not working
	Updated Polish translation
	Apply patch found in bug report #431
	Updated French translation
	Updated Serbian translations
	Updated Polish translation
	Apply corrected patch for brightness, etc in gl2 mode
	Update copyright date range
	Apply Patches to Japanese translated values from Munehiro Yamamoto
	Fix bug #430 - Album art size
	Updated Turkish translation
	Updated Danish translation
	Updated Hungarian translation
	Updated Catalan translation
	Updated Czech translation
	Updated German translation
	Patch from Onur Küçük to keep desktop gamma from being adjusted when using mplayer gl2 driver
	Updated Desktop file patch from Onur Küçük
	Make X11 support optional, slight side effect of weird fullscreen mode when running as plugin
		appears to be a GTK/GDK issue.
	Update man page to include keyboard shortcuts
	Updates Spanish translation
	Fixed problem with S taking infinite screenshots
	Enable dbus method to get the current URI, see dbus.txt
	Set cache size when we detect a playlist
	Make middle button toggle mute
	Add buttons to toggle loop and shuffle to the playlist window
	Correct problem with tracks loaded from an iPod as not being marked playable
	Updated Japanese translation from Launchpad
	Fix control panel when working in embedded mode
	Added UTF-8 to subtitle and metadata possible encodings
	Updated Spanish, Czech, Galacian, Polish and Russian translations from launchpad