@@ -1,4 +1,5 @@
 Development
+	Use cairo to draw audio meter bars
 	Updated Czech translation
 	Don't hide controls and mouse in fullscreen mode when mouse is over controls
 1.0.0
